--- a/src/connection-editor/ce-page-team-port.ui
+++ b/src/connection-editor/ce-page-team-port.ui
@@ -220,6 +220,7 @@
                     <property name="label" translatable="yes">_Queue ID:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">queue_id</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -262,6 +263,7 @@
                             <property name="hexpand">True</property>
                             <property name="label" translatable="yes">_Port priority:</property>
                             <property name="use_underline">True</property>
+                            <property name="xalign">0</property>
                           </object>
                           <packing>
                             <property name="left_attach">0</property>
@@ -337,6 +339,7 @@
                             <property name="hexpand">True</property>
                             <property name="label" translatable="yes">_LACP port priority:</property>
                             <property name="use_underline">True</property>
+                            <property name="xalign">0</property>
                           </object>
                           <packing>
                             <property name="left_attach">0</property>
@@ -351,6 +354,7 @@
                             <property name="hexpand">True</property>
                             <property name="label" translatable="yes">LACP port _key:</property>
                             <property name="use_underline">True</property>
+                            <property name="xalign">0</property>
                           </object>
                           <packing>
                             <property name="left_attach">0</property>
@@ -432,6 +436,7 @@
                     <property name="label" translatable="yes">_Link watcher:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">link_watcher_name</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -447,6 +452,7 @@
                     <property name="label" translatable="yes">_Up delay:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">delay_up</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -462,6 +468,7 @@
                     <property name="label" translatable="yes">_Down delay:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">delay_down</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -477,6 +484,7 @@
                     <property name="label" translatable="yes">Send _interval:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">send_interval</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -492,6 +500,7 @@
                     <property name="label" translatable="yes">Delay _before first send:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">init_wait</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -507,6 +516,7 @@
                     <property name="label" translatable="yes">_Maximum missed replies:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">missed_max</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -522,6 +532,7 @@
                     <property name="label" translatable="yes">_Source host:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">source_host</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -537,6 +548,7 @@
                     <property name="label" translatable="yes">_Target host:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">target_host</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
