--- a/src/connection-editor/ce-page-team.ui
+++ b/src/connection-editor/ce-page-team.ui
@@ -170,6 +170,7 @@
         <property name="halign">start</property>
         <property name="label" translatable="yes">_Teamed connections:</property>
         <property name="use_underline">True</property>
+        <property name="xalign">0</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
@@ -286,6 +287,7 @@
         <property name="halign">start</property>
         <property name="label" translatable="yes">_Interface name:</property>
         <property name="use_underline">True</property>
+        <property name="xalign">0</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
@@ -312,6 +314,7 @@
         <property name="label" translatable="yes">_MTU:</property>
         <property name="use_underline">True</property>
         <property name="mnemonic_widget">team_mtu</property>
+        <property name="xalign">0</property>
       </object>
       <packing>
         <property name="left_attach">0</property>
@@ -589,6 +592,7 @@
                     <property name="label" translatable="yes">_Peer notification count:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">notify_peers_count</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -604,6 +608,7 @@
                     <property name="label" translatable="yes">Peer _notification interval:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">notify_peers_interval</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -619,6 +624,7 @@
                     <property name="label" translatable="yes">_Multicast rejoin count:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">mcast_rejoin_count</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -634,6 +640,7 @@
                     <property name="label" translatable="yes">Multicast _rejoin interval:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">mcast_rejoin_interval</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -724,6 +731,7 @@
                     <property name="hexpand">True</property>
                     <property name="label" translatable="yes">_Hardware Address:</property>
                     <property name="use_underline">True</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -781,6 +789,7 @@
                     <property name="label" translatable="yes">_Runner:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">team_runner</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -796,6 +805,7 @@
                     <property name="label" translatable="yes">_Hardware address policy:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">hwaddr_policy</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -885,6 +895,7 @@
                     <property name="label" translatable="yes">_System priority:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">system_priority</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -900,6 +911,7 @@
                     <property name="label" translatable="yes">_Minimum ports:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">minimum_ports</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -915,6 +927,7 @@
                     <property name="label" translatable="yes">_Aggregator selection policy:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">agg_selection_policy</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -1067,6 +1080,7 @@
                     <property name="label" translatable="yes">Transmission _balancing interval:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">tx_balancing_interval</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -1082,6 +1096,7 @@
                     <property name="label" translatable="yes">_Transmission balancer:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">tx_balancer</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -1121,6 +1136,7 @@
                     <property name="label" translatable="yes">_Link watcher:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">link_watcher_name</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -1136,6 +1152,7 @@
                     <property name="label" translatable="yes">_Up delay:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">delay_up</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -1151,6 +1168,7 @@
                     <property name="label" translatable="yes">_Down delay:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">delay_down</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -1166,6 +1184,7 @@
                     <property name="label" translatable="yes">Send _interval:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">send_interval</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -1181,6 +1200,7 @@
                     <property name="label" translatable="yes">Delay _before first send:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">init_wait</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -1196,6 +1216,7 @@
                     <property name="label" translatable="yes">_Maximum missed replies:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">missed_max</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -1211,6 +1232,7 @@
                     <property name="label" translatable="yes">_Source host:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">source_host</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
@@ -1226,6 +1248,7 @@
                     <property name="label" translatable="yes">_Target host:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">target_host</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="left_attach">0</property>
