--- a/src/connection-editor/nm-connection-editor.ui
+++ b/src/connection-editor/nm-connection-editor.ui
@@ -222,6 +222,7 @@
                     <property name="label" translatable="yes">Connection _name:</property>
                     <property name="use_underline">True</property>
                     <property name="mnemonic_widget">connection_name</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
