--- a/src/connection-editor/ce-ip6-routes.ui
+++ b/src/connection-editor/ce-ip6-routes.ui
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.20.0 -->
 <interface>
   <requires lib="gtk+" version="3.4"/>
   <object class="GtkDialog" id="ip6_routes_dialog">
