--- a/src/connection-editor/ce-ppp-auth-methods.ui
+++ b/src/connection-editor/ce-ppp-auth-methods.ui
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.20.0 -->
 <interface>
   <requires lib="gtk+" version="3.4"/>
   <object class="GtkDialog" id="auth_methods_dialog">
@@ -64,8 +65,8 @@
               <object class="GtkLabel" id="label3">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="xalign">0</property>
                 <property name="label" translatable="yes">Allowed Authentication Methods</property>
+                <property name="xalign">0</property>
                 <attributes>
                   <attribute name="weight" value="bold"/>
                 </attributes>
@@ -78,9 +79,9 @@
             </child>
             <child>
               <object class="GtkVBox" id="vbox3">
-                <property name="margin_start">12</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="margin_start">12</property>
                 <property name="spacing">6</property>
                 <child>
                   <object class="GtkCheckButton" id="allow_eap">
@@ -166,9 +167,9 @@
                   <object class="GtkLabel" id="label2">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="xalign">0</property>
                     <property name="label" translatable="yes">In most cases, the provider’s PPP servers will support all authentication methods. If connections fail, try disabling support for some methods.</property>
                     <property name="wrap">True</property>
+                    <property name="xalign">0</property>
                     <attributes>
                       <attribute name="style" value="italic"/>
                     </attributes>
