--- a/src/info.ui
+++ b/src/info.ui
@@ -3,6 +3,7 @@
 <interface>
   <requires lib="gtk+" version="3.4"/>
   <object class="GtkDialog" id="info_dialog">
+    <property name="width_request">600</property>
     <property name="can_focus">False</property>
     <property name="border_width">5</property>
     <property name="title" translatable="yes">Connection Information</property>
@@ -96,6 +97,7 @@
                       <object class="GtkNotebook" id="info_notebook">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="scrollable">True</property>
                         <child>
                           <object class="GtkLabel" id="label69">
                             <property name="visible">True</property>
